--- a/index.html
+++ b/index.html
@@ -29,6 +29,34 @@
           </p>
           <a class="link color-text" href="#">Read more</a>
         </article>
+        <article>
+          <h2 class="h2 color-primary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit consectetur
+            adipisicing elit
+          </h2>
+          <p class="metadata color-text">1. siječnja 2020.</p>
+          <p class="body color-text">
+            Luctus ultrices quidem nostrud dolore occaecat habitasse? Mollit
+            litora voluptatum quod porttitor! Ad fuga lacus delectus, maxime ab,
+            consequuntur nonummy, anim ultricies! Massa? Debitis mollit,
+            possimus eros, fames sem eos eu sollicitudin.
+          </p>
+          <a class="link color-text" href="#">Read more</a>
+        </article>
+        <article>
+          <h2 class="h2 color-primary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit consectetur
+            adipisicing elit
+          </h2>
+          <p class="metadata color-text">1. siječnja 2020.</p>
+          <p class="body color-text">
+            Luctus ultrices quidem nostrud dolore occaecat habitasse? Mollit
+            litora voluptatum quod porttitor! Ad fuga lacus delectus, maxime ab,
+            consequuntur nonummy, anim ultricies! Massa? Debitis mollit,
+            possimus eros, fames sem eos eu sollicitudin.
+          </p>
+          <a class="link color-text" href="#">Read more</a>
+        </article>
       </main>
       <footer>
         <small class="small color-text">
